代码优化了
代码优化了

--- a/面试经验/你会这道阿里多线程面试题吗？.md
+++ b/面试经验/你会这道阿里多线程面试题吗？.md
@@ -90,26 +90,21 @@ public class 老司机1 implements Runnable {
     public void run() {
         while (true) {
             synchronized (LOCK) {
-                // 判断是否轮到当前线程执行
-                while (current % threadCount != threadNo) {
+               // 判断是否轮到当前线程执行
+                while (current % threadCount == threadNo) {
                     if (current > maxInt) {
-                        break;
+                        return;
                     }
-                    try {
-                        // 如果不是，则当前线程进入wait
-                        LOCK.wait();
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                    }
+                    System.out.println("thread" + threadNo + " : " + current);
+                    current++;
+                    LOCK.notifyAll();
                 }
-                // 最大值跳出循环
-                if (current > maxInt) {
-                    break;
+                try {
+                    // 如果不是，则当前线程进入wait
+                    LOCK.wait();
+                } catch (Exception e) {
+                    e.printStackTrace();
                 }
-                System.out.println("thread" + threadNo + " : " + current);
-                current++;
-                // 唤醒其他wait线程
-                LOCK.notifyAll();
             }
         }
     }
